--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="grocery-container">
             <div class="grocery-list">
                 <article class="grocery-item">
-                    <p class="title"></p>
+                    <p class="title">Eggs</p>
                     <div class="button-container">
                         <button type="button" class="edit-btn">
                             <i class="fas fa-edit"></i>
@@ -37,7 +37,7 @@
             </div>
 
             <!-- clear grocery list items -->
-            <button type="button" class="clear">Clear Items</button>
+            <button type="button" class="clear-btn">Clear Items</button>
         </div>
 
     </section>
