--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3>Grocery List</h3>
             <div class="form-controls">
                 <input type="text" id="grocery" placeholder="e.g. eggs" />
-                <button type="button" class="form-btn">Submit</button>
+                <button type="submit" class="form-btn">Submit</button>
             </div>
         </form>
         <div class="grocery-container">
